# legend

./: .gitignore  Cargo.toml  LICENSE  README.md  log
example/game/: game.json  map1.json  map2.json
game/: game.json  map1.json
snap/: snapcraft.yaml
src/: colors.rs  main.rs  tools.rs  types.rs
src/events/: mod.rs  triggers.rs
src/files/: args.rs  config.rs  maps.rs  mod.rs  path.rs  saves.rs
src/gameplay/: menu.rs  mod.rs  renderization.rs  saves.rs
