[package]
name = "legend"
version = "0.1.0"
authors = ["Tau <taumito@gmail.com>"]

[dependencies]
serde_json = "1.0.32"
serde = "1.0.79"
serde_derive = "1.0.79"
dirs = "1.0.4"
ears = { version = "0.5.1", optional = true }

[dependencies.pancurses]
version = "0.16"
features = ["show_menu", "disable_resize"]

[features]

sound = ["ears"] # Allow sound
